ASHOK YMLS/k8s/1pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: javawebapppod
    labels:
      app: javawebapp
spec:
    containers:
    - name:  javawebappcontainer
      image: ashokit/javawebapp
      ports:
      - containerPort: 8080
