ASHOK YMLS/k8s/7deamonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging
spec:
  selector:
    matchLabels:
      app: httpd-logging
  template:
    metadata:
       labels:
        app: httpd-logging
    spec:
      containers:
      - image: httpd
        name: webserver
        ports:
        - containerPort: 80s
