ASHOK YMLS/k8s/9blue.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-boot-demo-deployment-blue
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-boot-demo
      version: v1
      color: blue
  template:
    metadata:
      name: k8s-boot-demo
      labels:
        app: k8s-boot-demo
        version: v1
        color: blue
    spec:
      containers:
      - name: k8s-boot-demo
        image: ashokit/javawebapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
...
