ASHOK YMLS/k8s/10hpa.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hpa-deployment
 labels:
   name: hpadeployment
spec:
 replicas: 2
 selector:
   matchLabels:
     name: hpapod
 template:
   metadata:
     labels:
       name: hpapod
   spec:
     containers:
     - name: hpacontainer
       image: k8s.gcr.io/hpa-example
       ports:
       - name: http
         containerPort: 80
       resources:
        requests:
           cpu: "100m"
           memory: "64mi" 
        limits:
           cpu: "100m"
           memory: "64mi
         
...

apiVersion: v1
kind: Service
metadata:
 name: hpaclustorservice
labels:
 name: hpaservice
spec:
 ports:
 - port: 80
   targetPort: 80
 selector:
   name: hpapod
 type: clusterIP  


...


apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
 name: hpadeploymentautoscaler
spec:
 scaleTargetRef:
   apiVersion: apps/v1
   kind: Deployment
   name: hpadeployment
 minReplicas: 2
 maxReplicas: 5
 metrics:
  - resources:
        name: cpu
        targetAverageUtilization: 50
    type: Resource
...
