ASHOK YMLS/k8s/11.1mavenwebapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenwebapp
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
     type: Recreate
  selector:
    matchLabels:
     app: mavenwebapp
  template:
    metadata:
      name: mavenwebapppod
      labels:
        app: mavenwebapp
    spec:
      containers:
      - name: mavenwebappcontainer
        image: dockerhandson/maven-web-application:1
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
    name: mavenwebappsvc
spec:
  type: LoadBalancer
  selector: 
     app: mavenwebapp
  ports: 
   - port: 80
     targetPort: 8080
