ASHOK YMLS/k8s/2javaweappsvc.yml
apiVersion: v1
kind: Service
metadata:
    name: javawebappsvc
spec:
  type: ClusterIP
  selector: 
     app: javawebapp
  ports: 
   - port: 80
     targetPort: 8080
