ASHOK YMLS/k8s/3svcnodePort.yml
apiVersion: v1
kind: Service
metadata:
    name: javawebappsvc
spec:
  type: NodePort
  selector: 
     app: javawebapp
  ports: 
   - port: 80
     targetPort: 8080
