ASHOK YMLS/k8s/4loadbancersvc.yml
apiVersion: v1
kind: Service
metadata:
    name: javawebappsvc
spec:
  type: LoadBalancer
  selector: 
     app: javawebapp
  ports: 
   - port: 80
     targetPort: 8080
