ASHOK YMLS/k8s/5replication_controller.yml
# pod manifest

---
# node-port  service manifest   {to expose pod outside clustor }

apiVersion: v1
kind: Service
metadata:
    name: javawebappsvc
spec:
  type: NodePort
  selector: 
     app: javawebapp
  ports: 
   - port: 80
     targetPort: 8080

---
