ASHOK YMLS/k8s/8deployment.yml
# pod manifest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappdeployment
spec:
  replicas: 1
  strategy:
     type: Recreate
  selector:
    matchLabels:
     app: javawebapp
  template:
    metadata:
      name: javawebapppod
      labels:
        app: javawebapp
    spec:
      containers:
      - name: javawebappcontainer
        image: ashokit/javawebapp
        ports:
        - containerPort: 8080

---
# node-port  service manifest   {to expose pod outside clustor }

apiVersion: v1
kind: Service
metadata:
    name: javawebappsvc
spec:
  type: NodePort
  selector: 
     app: javawebapp
  ports: 
   - port: 80
     targetPort: 8080
