ASHOK YMLS/k8s/9.1svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-boot-demo-service
spec:
  type: NodePort
  selector:
    version: v1
    app: k8s-boot-demo
  ports:
  - name: app-port-mapping
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30090
...
