ASHOK YMLS/k8s/12-ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
spec:
  ingressClassName: nginx
  rules:
  - host:
     http:
      paths:
      - path: "/java-web-app"
        pathType: Prefix
        backend:
          service:
            name: javawebappsvc
            port:
              number: 80
      - path: "/maven-web-application"
        pathType: Prefix
        backend:
          service:
            name: mavenwebappsvc
            port:
              number: 80
